[gd_scene load_steps=16 format=2]

[ext_resource path="res://Audio/SFX/hit.wav" type="AudioStream" id=1]
[ext_resource path="res://Assets/Monsters/bat1.png" type="Texture" id=2]
[ext_resource path="res://Assets/Monsters/bat2.png" type="Texture" id=3]
[ext_resource path="res://utils/enemy/HealthBar.tscn" type="PackedScene" id=6]
[ext_resource path="res://utils/enemy/WanderController.tscn" type="PackedScene" id=7]
[ext_resource path="res://utils/Monster.gd" type="Script" id=8]
[ext_resource path="res://utils/area/SoftCollision.gd" type="Script" id=10]
[ext_resource path="res://utils/enemy/Stats.gd" type="Script" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
height = 38.7875

[sub_resource type="CapsuleShape2D" id=3]
radius = 30.7132
height = 82.4187

[sub_resource type="GDScript" id=4]
script/source = "extends Area2D
# used by player and enemy monsters

export var knockback_vector = Vector2.ZERO
export var knockback_factor = 110
export var knockable = false
export var damage = 10 # weapon attack power

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

func _physics_process(delta):
	if knockable:
		knockback_vector = global_position.direction_to(PlayerStats.player_position)
"

[sub_resource type="CapsuleShape2D" id=5]
radius = 9.4979
height = 96.7257

[sub_resource type="CircleShape2D" id=6]
radius = 124.649

[sub_resource type="CircleShape2D" id=7]
radius = 23.1199

[node name="Bat" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 8 )
MAX_SPEED = 20
experience = 20
mon_name = "Bat"

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -12 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -24.4103, 24.1277 )
rotation = 3.61283
shape = SubResource( 2 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -10 )
rotation = 0.432842
shape = SubResource( 3 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 0
script = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -8.57367, -12.5512 )
rotation = 0.495674
shape = SubResource( 5 )

[node name="Eyesight" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Eyesight"]
shape = SubResource( 6 )

[node name="SoftCollision" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 64
script = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="SoftCollision"]
shape = SubResource( 7 )

[node name="Stats" type="Node" parent="."]
script = ExtResource( 11 )
max_health = 50

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2

[node name="WanderController" parent="." instance=ExtResource( 7 )]
wander_range = 300

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -10.1582
margin_top = -80.7315
margin_right = 101.842
margin_bottom = -60.7315

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_shape_entered" from="Hurtbox" to="." method="_on_Hitbox_body_shape_entered"]
[connection signal="body_shape_entered" from="Eyesight" to="." method="_on_Eyesight_body_shape_entered"]
[connection signal="body_shape_exited" from="Eyesight" to="." method="_on_Eyesight_body_shape_exited"]
[connection signal="no_health" from="Stats" to="." method="_on_Stats_no_health"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
